--- a/styl.css
+++ b/styl.css
@@ -109,7 +109,11 @@ body {
     text-align: left;
     
 }
-
+.KontList{
+    
+    list-style-type: none;
+    padding-left: 0px;
+}
 .VMedN{
     grid-area: MediaN;
     width:40vw ;
