--- a/styl.css
+++ b/styl.css
@@ -26,8 +26,8 @@ body {
     text-decoration: none;
     transition: all 0.3s ease;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
-    justify-content: center;
     align-content: center;
+    text-align: center;
     
     
 }
@@ -102,6 +102,7 @@ body {
 }
 .TextMediaN{
     grid-area: TextN;
+    
     
 }
 .TextMediaP{
