--- a/styl.css
+++ b/styl.css
@@ -140,7 +140,14 @@ body {
     
 }
 
+.Bold{
+    font-weight: bold;
+}
 
+.Bold a{
+    text-decoration: none;
+    color: #2c3e50;
+}
 
 .VMedN{
     grid-area: MediaN;
